--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link type="text/css" href="css/3Dstyle.css" rel="stylesheet" />
 </head>
 <body>
+<h1 text-align="center" >Wingshu</h1>
+	<h3>装修我们的第一个家</h3>
 <div class="box"  >
 	<ul class="minbox">
 		<li></li>
